--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1,p {
     cursor: pointer;
 }
 .grey {
-    background-color: grey;
+    background-color: #ffafcc;
 }
 .white {
     background-color: white;
